compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__same_imports_multiple_times_4.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1895
expression: "\n        import one.{fn1}\n        import two.{fn2} as one\n        "
---
error: Duplicate import
  ┌─ /src/one/two.gleam:2:16
  │
2 │         import one.{fn1}
  │                ^^^^^^^^^ First imported here
3 │         import two.{fn2} as one
  │                ^^^^^^^^^^^^^^^^ Reimported here

one has been imported multiple times.
Names in a Gleam module must be unique so one will need to be renamed.

